--- a/android/randomcoffee/app/src/main/AndroidManifest.xml
+++ b/android/randomcoffee/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.RandomCoffee"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.RandomCoffee">
             <intent-filter>
