--- a/android/randomcoffee/gradle/libs.versions.toml
+++ b/android/randomcoffee/gradle/libs.versions.toml
@@ -5,15 +5,15 @@ circuitFoundation = "0.24.0"
 circuitxAndroid = "0.24.0"
 coroutines = "1.9.0"
 gradlePlugin = "0.16.0"
-kotlin = "1.9.24"
+kotlin = "2.0.20"
 coreKtx = "1.13.1"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
-kotlinReflect = "1.9.23"
-kotlinStdlibJdk8 = "1.9.24"
+kotlinReflect = "2.0.20"
+kotlinStdlibJdk8 = "2.0.20"
 kotlintestRunnerJunit5 = "3.4.2"
-loggingInterceptor = "4.3.1"
+loggingInterceptor = "4.12.0"
 moshi = "1.15.1"
 moshiKotlin = "1.15.1"
 retrofit = "2.11.0"
@@ -26,15 +26,14 @@ composeDestinations = "1.11.6"
 hiltNavigationCompose = "1.2.0"
 hiltVersion = "2.52"
 lifecycleExtensions = "2.2.0"
-ksp = "1.9.24-1.0.20"
+ksp = "2.0.20-1.0.25"
 lifecycleViewmodelKtx = "2.8.6"
 roomVersion = "2.6.1"
 pagingCommonAndroid = "3.3.2"
 hilt = "2.48"
-appcompat = "1.6.1"
+appcompat = "1.7.0"
 material = "1.12.0"
-kgen = "0.16.0"
-jetbrainsKotlinJvm = "1.9.24"
+jetbrainsKotlinJvm = "2.0.20"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -90,5 +89,5 @@ jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = 
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 android-library = { id = "com.android.library", version.ref = "agp" }
-kroegerama-kgen = { id = "com.kroegerama.openapi-kgen.gradle-plugin", version.ref = "kgen" }
 jetbrains-kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "jetbrainsKotlinJvm" }
+kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
