--- a/android/randomcoffee/gradle/libs.versions.toml
+++ b/android/randomcoffee/gradle/libs.versions.toml
@@ -3,6 +3,7 @@ agp = "8.7.0"
 animatedNavigationBar = "1.0.0"
 circuitFoundation = "0.24.0"
 circuitxAndroid = "0.24.0"
+converterKotlinxSerialization = "2.11.0"
 coroutines = "1.9.0"
 gradlePlugin = "0.16.0"
 kotlin = "2.0.20"
@@ -14,6 +15,7 @@ kotlinReflect = "2.0.20"
 kotlinStdlibJdk8 = "2.0.20"
 kotlintestRunnerJunit5 = "3.4.2"
 loggingInterceptor = "4.12.0"
+mockk = "1.13.13"
 moshi = "1.15.1"
 moshiKotlin = "1.15.1"
 retrofit = "2.11.0"
@@ -39,6 +41,7 @@ jetbrainsKotlinJvm = "2.0.20"
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 animated-navigation-bar = { module = "com.exyte:animated-navigation-bar", version.ref = "animatedNavigationBar" }
 circuit-foundation = { module = "com.slack.circuit:circuit-foundation", version.ref = "circuitFoundation" }
+converter-kotlinx-serialization = { module = "com.squareup.retrofit2:converter-kotlinx-serialization", version.ref = "converterKotlinxSerialization" }
 converter-moshi = { module = "com.squareup.retrofit2:converter-moshi", version.ref = "retrofit" }
 converter-scalars = { module = "com.squareup.retrofit2:converter-scalars", version.ref = "retrofit" }
 gradle-plugin = { module = "com.kroegerama.openapi-kgen:gradle-plugin", version.ref = "gradlePlugin" }
@@ -72,6 +75,7 @@ kotlintest-runner-junit5 = { module = "io.kotlintest:kotlintest-runner-junit5", 
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version = "1.7.3" }
 logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "loggingInterceptor" }
+mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
 moshi = { module = "com.squareup.moshi:moshi", version.ref = "moshi" }
 moshi-adapters = { module = "com.squareup.moshi:moshi-adapters", version.ref = "moshi" }
 moshi-kotlin = { module = "com.squareup.moshi:moshi-kotlin", version.ref = "moshiKotlin" }
