--- a/android/randomcoffee/gradle/libs.versions.toml
+++ b/android/randomcoffee/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ kotlinReflect = "2.0.20"
 kotlinStdlibJdk8 = "2.0.20"
 kotlintestRunnerJunit5 = "3.4.2"
 loggingInterceptor = "4.12.0"
+materialIconsExtended = "1.7.3"
 mockk = "1.13.13"
 moshi = "1.15.1"
 moshiKotlin = "1.15.1"
@@ -39,6 +40,7 @@ jetbrainsKotlinJvm = "2.0.20"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIconsExtended" }
 animated-navigation-bar = { module = "com.exyte:animated-navigation-bar", version.ref = "animatedNavigationBar" }
 circuit-codegen = { module = "com.slack.circuit:circuit-codegen", version.ref = "circuitFoundation" }
 circuit-codegen-annotations = { module = "com.slack.circuit:circuit-codegen-annotations", version.ref = "circuitFoundation" }
