--- a/android/randomcoffee/gradle/libs.versions.toml
+++ b/android/randomcoffee/gradle/libs.versions.toml
@@ -1,11 +1,13 @@
 [versions]
-agp = "8.7.0"
+agp = "8.7.2"
 animatedNavigationBar = "1.0.0"
 circuitFoundation = "0.24.0"
 circuitxAndroid = "0.24.0"
 converterKotlinxSerialization = "2.11.0"
 coroutines = "1.9.0"
+datastorePreferences = "1.1.1"
 gradlePlugin = "0.16.0"
+jwtdecode = "2.0.2"
 kotlin = "2.0.20"
 coreKtx = "1.13.1"
 junit = "4.13.2"
@@ -15,31 +17,34 @@ kotlinReflect = "2.0.20"
 kotlinStdlibJdk8 = "2.0.20"
 kotlintestRunnerJunit5 = "3.4.2"
 loggingInterceptor = "4.12.0"
-materialIconsExtended = "1.7.3"
+materialIconsExtended = "1.7.5"
 mockk = "1.13.13"
 moshi = "1.15.1"
 moshiKotlin = "1.15.1"
 retrofit = "2.11.0"
-yakov = "1.7.0-rc01-5"
-lifecycleRuntimeKtx = "2.8.6"
-activityCompose = "1.9.2"
-composeBom = "2024.09.03"
+yakov = "1.7.0"
+lifecycleRuntimeKtx = "2.8.7"
+activityCompose = "1.9.3"
+composeBom = "2024.11.00"
 coil = "2.7.0"
 composeDestinations = "1.11.7"
 hiltNavigationCompose = "1.2.0"
 hiltVersion = "2.52"
 lifecycleExtensions = "2.2.0"
 ksp = "2.0.20-1.0.25"
-lifecycleViewmodelKtx = "2.8.6"
+lifecycleViewmodelKtx = "2.8.7"
 roomVersion = "2.6.1"
-pagingCommonAndroid = "3.3.2"
+pagingCommonAndroid = "3.3.4"
 hilt = "2.48"
 appcompat = "1.7.0"
 material = "1.12.0"
 jetbrainsKotlinJvm = "2.0.20"
+datastoreCoreAndroid = "1.1.1"
+datastorePreferencesCoreJvm = "1.1.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
 androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIconsExtended" }
 animated-navigation-bar = { module = "com.exyte:animated-navigation-bar", version.ref = "animatedNavigationBar" }
 circuit-codegen = { module = "com.slack.circuit:circuit-codegen", version.ref = "circuitFoundation" }
@@ -73,6 +78,7 @@ compose-navigation-core = { module = "io.github.raamcosta.compose-destinations:c
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltVersion" }
 hilt-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "hiltVersion" }
 compose-navigation-ksp = { module = "io.github.raamcosta.compose-destinations:ksp", version.ref = "composeDestinations" }
+jwtdecode = { module = "com.auth0.android:jwtdecode", version.ref = "jwtdecode" }
 kotlin-reflect = { module = "org.jetbrains.kotlin:kotlin-reflect", version.ref = "kotlinReflect" }
 kotlin-stdlib-jdk8 = { module = "org.jetbrains.kotlin:kotlin-stdlib-jdk8", version.ref = "kotlinStdlibJdk8" }
 kotlintest-runner-junit5 = { module = "io.kotlintest:kotlintest-runner-junit5", version.ref = "kotlintestRunnerJunit5" }
@@ -91,6 +97,8 @@ lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx
 androidx-paging-common-android = { group = "androidx.paging", name = "paging-common-android", version.ref = "pagingCommonAndroid" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
+androidx-datastore-core-android = { group = "androidx.datastore", name = "datastore-core-android", version.ref = "datastoreCoreAndroid" }
+androidx-datastore-preferences-core-jvm = { group = "androidx.datastore", name = "datastore-preferences-core-jvm", version.ref = "datastorePreferencesCoreJvm" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
