--- a/user/docker-compose.yml
+++ b/user/docker-compose.yml
@@ -7,3 +7,5 @@ services:
       POSTGRES_USER: ${DB_USER}
     ports:
       -  ${DB_PORT}:5432
+    volumes:
+      - ./migrations:/docker-entrypoint-initdb.d
