--- a/android/randomcoffee/gradle/libs.versions.toml
+++ b/android/randomcoffee/gradle/libs.versions.toml
@@ -7,12 +7,14 @@ circuitFoundation = "0.24.0"
 circuitxAndroid = "0.24.0"
 coil = "2.7.0"
 composeBom = "2024.10.00"
+composecalendar = "1.3.0"
 composeDestinations = "1.11.7"
 converterKotlinxSerialization = "2.11.0"
 coreKtx = "1.13.1"
 coroutines = "1.9.0"
 datastore = "1.1.1"
 espressoCore = "3.6.1"
+expandableCalendar = "1.0.0"
 gradlePlugin = "0.16.0"
 hilt = "2.48"
 hiltNavigationCompose = "1.2.0"
@@ -75,9 +77,11 @@ coil = { module = "io.coil-kt:coil", version.ref = "coil" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
 compose-navigation-core = { module = "io.github.raamcosta.compose-destinations:core", version.ref = "composeDestinations" }
 compose-navigation-ksp = { module = "io.github.raamcosta.compose-destinations:ksp", version.ref = "composeDestinations" }
+composecalendar = { module = "io.github.boguszpawlowski.composecalendar:composecalendar", version.ref = "composecalendar" }
 converter-kotlinx-serialization = { module = "com.squareup.retrofit2:converter-kotlinx-serialization", version.ref = "converterKotlinxSerialization" }
 converter-moshi = { module = "com.squareup.retrofit2:converter-moshi", version.ref = "retrofit" }
 converter-scalars = { module = "com.squareup.retrofit2:converter-scalars", version.ref = "retrofit" }
+expandable-compose-calendar = { module = "com.github.mateusz800:Expandable-Compose-Calendar", version.ref="expandableCalendar" }
 gradle-plugin = { module = "com.kroegerama.openapi-kgen:gradle-plugin", version.ref = "gradlePlugin" }
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltVersion" }
 hilt-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "hiltVersion" }
